--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         *{
             margin:0;
             padding:0;
+            overflow: hidden;
         }
         body{
             background-color:#f5f5f5;
